fluxcd/02-applications/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: infrastructure
    gateway.networking.k8s.io/allowed: "true"
